@@ -1,4 +1,0 @@
-<!entity collectionscont.sgml system "collectionscont.sgml">
-<!entity collectionsmeta.sgml system "collectionsmeta.sgml">
-<!entity collections00.sgml system "collections00.sgml">
-<!entity collectionspages.sgml system "collectionspages.sgml">
